[gd_scene load_steps=4 format=3 uid="uid://mainmenu001"]

[ext_resource type="Script" path="res://src/ui/menus/main_menu.gd" id="1_menu"]
[ext_resource type="PackedScene" uid="uid://optionsmenu001" path="res://src/ui/menus/options_menu.tscn" id="2_options"]

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 48

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.15, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 150.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
horizontal_alignment = 1
vertical_alignment = 1
text = "Korean Fantasy RPG"
label_settings = SubResource("LabelSettings_title")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Play"

[node name="OptionsButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Quit"

[node name="OptionsMenu" parent="." instance=ExtResource("2_options")]
visible = false
